Add support for Async worker
